tdf#149140 vcl,sw: PDF/UA export: add Scope attribute to table headers

Change-Id: If2402c824e637016e3c10860810501ec60732bc5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142000
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>